# CrewAI_pdf_reading

./: .gitignore  README.md  launch_dashboard.py  test_llm_fix.py
mlruns/0/: meta.yaml
pdf_reading/: .gitignore  LICENSE  LOCAL_LLM_GUIDE.md  Makefile  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
pdf_reading/apps/: streamlit_app.py
pdf_reading/docs/: mkdocs.yml
pdf_reading/docs/docs/: index.md
pdf_reading/examples/: advanced_crew.py  basic_usage.py  local_llm_test.py
pdf_reading/llm_pdf_reading/: __init__.py  config.py  crew_agents.py  local_llm.py  orchestrator.py  pdf_utils.py
pdf_reading/llm_pdf_reading/monitoring/: CORREÇÕES_APLICADAS.md  README_MONITORING.md  __init__.py  analyze_mlflow_metrics.py  config.py  create_profile_pdf.py  dashboard.py  decorators.py  experiment_manager.py  final_summary.py  integration_example.py  integration_examples.py  launch_dashboard.py  metrics_collector.py  model_monitor.py  open_dashboard.py  performance_tracker.py  restart_mlflow.py  setup_monitoring.py  simple_integration_example.py  start_monitoring.py  test_monitoring.py  test_pdf_monitoring.py  test_random_forest_fixed.py  test_random_forest_pdf.py  test_simple.py
pdf_reading/llm_pdf_reading/monitoring/mlruns/0/: meta.yaml
pdf_reading/llm_pdf_reading/monitoring/mlruns/958683764650219245/: meta.yaml
pdf_reading/models/: .gitkeep
pdf_reading/scripts/: .gitkeep  run_streamlit.bat  setup_environment.py  setup_local_llm.bat  setup_local_llm.ps1  setup_local_llm.py
pdf_reading/tests/: test_data.py  test_pdf_processor.py
(+2 files in other folders)
