[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_pdf_reading"
version = "0.0.1"
description = "This project aims to develop a Large Language Model (LLM) solution designed for efficient and intelligent extraction, analysis, and summarization of content from PDF documents. The primary goal is to transform static PDF information into dynamic, actionable insights, significantly reducing the manual effort typically involved in processing these documents."
authors = [
  { name = "sergio_alves_da_cruz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["llm_pdf_reading"]
force_sort_within_sections = true


